# Jarvis-try-1

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  requirements.txt~
include/core/: jarvis.h
include/io/: console.h
include/io/console/: main_console_loop.h
include/llm/: llama_interface.h
src/: main.c
src/core/: core.c  jarvis.c 
src/io/: console.c  io.c
src/llm/: llama_interface.c  llama_wrapper.cpp
src/main/core/: __init__.py
